--- a/Home_Sales_colab.ipynb
+++ b/Home_Sales_colab.ipynb
@@ -12,31 +12,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 45,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a_KW73O2e3dw",
-        "outputId": "e4db1326-1606-408d-c2a7-d3b2f80be413"
+        "outputId": "276f7042-2cd8-4692-a5e7-12ca10d79eaa"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\r0% [Working]\r            \rHit:1 http://security.ubuntu.com/ubuntu jammy-security InRelease\n",
-            "\r0% [Connecting to archive.ubuntu.com (185.125.190.83)] [Connected to cloud.r-project.org (52.85.151.\r                                                                                                    \rGet:2 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease [3,626 B]\n",
-            "\r0% [Connecting to archive.ubuntu.com (185.125.190.83)] [Connected to r2u.stat.illinois.edu (192.17.1\r                                                                                                    \rHit:3 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
-            "Hit:4 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
-            "Ign:5 https://r2u.stat.illinois.edu/ubuntu jammy InRelease\n",
+            "\r0% [Working]\r            \rHit:1 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease\n",
+            "\r0% [Connecting to archive.ubuntu.com (185.125.190.81)] [Connecting to security.ubuntu.com (185.125.1\r                                                                                                    \rHit:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
+            "\r0% [Waiting for headers] [Waiting for headers] [Waiting for headers] [Connected to ppa.launchpadcont\r                                                                                                    \rGet:3 http://security.ubuntu.com/ubuntu jammy-security InRelease [129 kB]\n",
+            "Ign:4 https://r2u.stat.illinois.edu/ubuntu jammy InRelease\n",
+            "Hit:5 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
             "Hit:6 https://r2u.stat.illinois.edu/ubuntu jammy Release\n",
-            "Hit:7 http://archive.ubuntu.com/ubuntu jammy-updates InRelease\n",
-            "Hit:8 http://archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
-            "Hit:9 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
-            "Hit:10 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
+            "Get:7 http://archive.ubuntu.com/ubuntu jammy-updates InRelease [128 kB]\n",
+            "Hit:8 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
+            "Hit:9 http://archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
+            "Hit:11 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
             "Hit:12 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
-            "Fetched 3,626 B in 1s (2,570 B/s)\n",
+            "Fetched 257 kB in 1s (181 kB/s)\n",
             "Reading package lists... Done\n",
             "W: Skipping acquire of configured file 'main/source/Sources' as repository 'https://r2u.stat.illinois.edu/ubuntu jammy InRelease' does not seem to provide it (sources.list entry misspelt?)\n",
             "tar: spark-3.4.0-bin-hadoop3.tgz: Cannot open: No such file or directory\n",
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 46,
       "metadata": {
         "id": "2XbWNf1Te5fM"
       },
@@ -88,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 47,
       "metadata": {
         "id": "wOJqxG_RPSwp"
       },
@@ -105,13 +105,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 49,
       "metadata": {
         "id": "RoljcJ7WPpnm",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "de66718e-40b1-4dc0-fce5-d56997fe1055"
+        "outputId": "460eab35-d435-426e-8366-030249c6f921"
       },
       "outputs": [
         {
@@ -131,18 +131,8 @@
             "|8d54a71b-c520-44e...|2019-07-21|      2010|323956|       2|        3|       1506|   11816|     1|         0|  25|\n",
             "|e81aacfe-17fe-46b...|2020-06-16|      2016|181925|       3|        3|       2137|   11709|     2|         0|  22|\n",
             "|2ed8d509-7372-46d...|2021-08-06|      2015|258710|       3|        3|       1918|    9666|     1|         0|  25|\n",
-            "|f876d86f-3c9f-42b...|2019-02-27|      2011|167864|       3|        3|       2471|   13924|     2|         0|  15|\n",
-            "|0a2bd445-8508-4d8...|2021-12-30|      2014|337527|       2|        3|       1926|   12556|     1|         0|  23|\n",
-            "|941bad30-eb49-4a7...|2020-05-09|      2015|229896|       3|        3|       2197|    8641|     1|         0|   3|\n",
-            "|dd61eb34-6589-4c0...|2021-07-25|      2016|210247|       3|        2|       1672|   11986|     2|         0|  28|\n",
-            "|f1e4cef7-d151-439...|2019-02-01|      2011|398667|       2|        3|       2331|   11356|     1|         0|   7|\n",
-            "|ea620c7b-c2f7-4c6...|2021-05-31|      2011|437958|       3|        3|       2356|   11052|     1|         0|  26|\n",
-            "|f233cb41-6f33-4b0...|2021-07-18|      2016|437375|       4|        3|       1704|   11721|     2|         0|  34|\n",
-            "|c797ca12-52cd-4b1...|2019-06-08|      2015|288650|       2|        3|       2100|   10419|     2|         0|   7|\n",
-            "|0cfe57f3-28c2-472...|2019-10-04|      2015|308313|       3|        3|       1960|    9453|     2|         0|   2|\n",
-            "|4566cd2a-ac6e-435...|2019-07-15|      2016|177541|       3|        3|       2130|   10517|     2|         0|  25|\n",
             "+--------------------+----------+----------+------+--------+---------+-----------+--------+------+----------+----+\n",
-            "only showing top 20 rows\n",
+            "only showing top 10 rows\n",
             "\n"
           ]
         }
@@ -150,18 +140,18 @@
       "source": [
         "# 2. Create a temporary view of the DataFrame.\n",
         "df.createOrReplaceTempView('home_data')\n",
-        "df.show()\n"
+        "df.show(10)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 50,
       "metadata": {
         "id": "L6fkwOeOmqvq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cbd08bbf-0f6a-4aa9-92b4-79b9d10f7eed"
+        "outputId": "b3eb385a-cd2b-4b5f-a960-8d833e2edcf4"
       },
       "outputs": [
         {
@@ -181,18 +171,8 @@
             "|2022-03-28|338544.78|\n",
             "|2019-06-04|306373.08|\n",
             "|2021-12-18| 305264.3|\n",
-            "|2020-11-29|318153.89|\n",
-            "|2020-01-21| 420576.0|\n",
-            "|2020-07-24| 293661.5|\n",
-            "|2021-11-25|291762.27|\n",
-            "|2019-11-18|290259.83|\n",
-            "|2019-09-22| 284864.5|\n",
-            "|2020-08-05|243835.56|\n",
-            "|2019-11-01|254751.38|\n",
-            "|2021-10-02|303838.38|\n",
-            "|2020-08-29| 285457.3|\n",
             "+----------+---------+\n",
-            "only showing top 20 rows\n",
+            "only showing top 10 rows\n",
             "\n"
           ]
         }
@@ -206,18 +186,18 @@
         "    .groupBy(\"date\")\\\n",
         "    .agg(round(mean(\"price\"), 2).alias(\"avg_price\"))\n",
         "\n",
-        "four_bed_per_year.show()\n"
+        "four_bed_per_year.show(10)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 52,
       "metadata": {
         "id": "l8p_tUS8h8it",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d47ac3d5-d041-43a1-abb8-40abc91988f6"
+        "outputId": "7ea6d415-68f9-4ec3-82bb-deb8aa785a17"
       },
       "outputs": [
         {
@@ -237,18 +217,8 @@
             "|2021-12-18| 178508.5|\n",
             "|2021-08-27|298209.33|\n",
             "|2019-06-04| 223109.0|\n",
-            "|2020-08-05|304566.75|\n",
-            "|2019-11-18|319833.67|\n",
-            "|2020-01-21| 303045.8|\n",
-            "|2021-11-25|321816.67|\n",
-            "|2019-11-01| 279354.0|\n",
-            "|2020-07-24| 283740.0|\n",
-            "|2020-11-29| 366673.0|\n",
-            "|2021-10-02| 400307.5|\n",
-            "|2019-09-22| 350352.5|\n",
-            "|2020-04-30| 192065.5|\n",
             "+----------+---------+\n",
-            "only showing top 20 rows\n",
+            "only showing top 10 rows\n",
             "\n"
           ]
         }
@@ -260,18 +230,18 @@
         "three_bed_three_bath_per_year = df.filter((df.bedrooms == 3) & (df.bathrooms == 3)) \\\n",
         "    .groupBy(\"date\") \\\n",
         "    .agg(round(mean(\"price\"), 2).alias(\"avg_price\"))\n",
-        "three_bed_three_bath_per_year.show()\n"
+        "three_bed_three_bath_per_year.show(10)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 53,
       "metadata": {
         "id": "Y-Eytz64liDU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0c8172b0-acbc-4ba7-94e1-a6c53c69c787"
+        "outputId": "d0a236ed-4164-4789-8777-e2edcf90ce4f"
       },
       "outputs": [
         {
@@ -291,18 +261,8 @@
             "|2019-05-08| 391556.0|\n",
             "|2019-11-01|201940.33|\n",
             "|2019-11-18| 398256.0|\n",
-            "|2021-10-02| 402262.0|\n",
-            "|2019-09-22| 365867.0|\n",
-            "|2020-01-21| 293205.0|\n",
-            "|2020-04-30| 232217.0|\n",
-            "|2022-01-31| 284811.0|\n",
-            "|2022-05-19|302160.33|\n",
-            "|2020-08-29| 423501.0|\n",
-            "|2020-08-28| 296028.5|\n",
-            "|2019-11-21| 428167.0|\n",
-            "|2021-07-30| 346839.0|\n",
             "+----------+---------+\n",
-            "only showing top 20 rows\n",
+            "only showing top 10 rows\n",
             "\n"
           ]
         }
@@ -320,26 +280,26 @@
         ") \\\n",
         "    .groupBy(\"date\") \\\n",
         "    .agg(round(mean(\"price\"), 2).alias(\"avg_price\"))\n",
-        "avg_price_per_year.show()\n",
+        "avg_price_per_year.show(10)\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 54,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GUrfgOX1pCRd",
-        "outputId": "78406091-91f0-4969-c161-7520b9540b3a"
+        "outputId": "8e4b94d4-b337-4599-d76c-4cf49eb092ca"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--- 8.654594421386719e-05 seconds ---\n"
+            "--- 0.0003139972686767578 seconds ---\n"
           ]
         }
       ],
@@ -357,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 55,
       "metadata": {
         "id": "KAhk3ZD2tFy8"
       },
@@ -369,13 +329,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 56,
       "metadata": {
         "id": "4opVhbvxtL-i",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4a4fb836-cd0c-4ad9-a2ce-99f756d1cc1b"
+        "outputId": "8e0b609d-1307-4097-f69f-747e70855473"
       },
       "outputs": [
         {
@@ -386,7 +346,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 56
         }
       ],
       "source": [
@@ -396,20 +356,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 57,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5GnL46lwTSEk",
-        "outputId": "70516f47-363e-43f4-f45e-3c6d0fdbe5bc"
+        "outputId": "9bfa52f4-043a-4414-ec73-ccbffd4c8b57"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--- 5.698204040527344e-05 seconds ---\n"
+            "--- 5.1975250244140625e-05 seconds ---\n"
           ]
         }
       ],
@@ -428,7 +388,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 58,
       "metadata": {
         "id": "Qm12WN9isHBR"
       },
@@ -440,7 +400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 59,
       "metadata": {
         "id": "AZ7BgY61sRqY"
       },
@@ -452,7 +412,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 60,
       "metadata": {
         "id": "J6MJkHfvVcvh"
       },
@@ -464,20 +424,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 61,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "G_Vhb52rU1Sn",
-        "outputId": "87bef247-00e8-473d-c917-896d2f75200c"
+        "outputId": "74c6b70c-e2ff-40c9-a485-76aef902f889"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--- 0.000118255615234375 seconds ---\n"
+            "--- 5.459785461425781e-05 seconds ---\n"
           ]
         }
       ],
@@ -496,7 +456,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 62,
       "metadata": {
         "id": "hjjYzQGjtbq8"
       },
@@ -508,7 +468,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 63,
       "metadata": {
         "id": "Sy9NBvO7tlmm"
       },
